# template-polylith-python-devbox-uv

./: .coveragerc  .gitignore  .pre-commit-config.yaml  copier.yml  devbox.json  process-compose.yml  pyproject.toml  pyproject.toml.jinja  treefmt.toml  workspace.toml
bases/{{pymodule_name}}/api/: __init__.py  core.py
bases/{{pymodule_name}}/cli/: __init__.py  core.py.jinja
bases/{{pymodule_name}}/cli/subcommands/: __init__.py.jinja  version.py
bases/{{pymodule_name}}/server/: __init__.py  core.py
bases/{{pymodule_name}}/{% if enable_cli %}cli{% endif %}/: __init__.py  core.py  main.py
bases/{{pymodule_name}}/{% if enable_cli %}cli{% endif %}/subcommands/: __init__.py  server.py  version.py
components/{{pymodule_name}}/logging/: __init__.py  core.py  core.py.jinja
components/{{pymodule_name}}/services/: __init__.py
components/{{pymodule_name}}/settings/: __init__.py.jinja  base.py  core.py.jinja  logging.py  logging.py.jinja
components/{{pymodule_name}}/version/: __init__.py  __init__.py.jinja
projects/{{pymodule_name}}_cli/: pyproject.toml.jinja
test/: conftest.py  conftest.py.jinja
test/bases/{{pymodule_name}}/cli/: test_core.py  test_core.py.jinja
test/bases/{{pymodule_name}}/{% if enable_cli %}cli{% endif %}/: test_cli.py
test/bases/{{pymodule_name}}/{% if enable_server %}server{% endif %}/: test_core.py
test/components/{{pymodule_name}}/: test_settings.py  test_settings.py.jinja
test/components/{{pymodule_name}}/logging/: test_core.py  test_core.py.jinja
test/components/{{pymodule_name}}/services/: test_core.py
{% if enable_cli %}projects{{ _copier_conf.sep }}{{ pymodule_name }}_cli{% endif %}/: pyproject.toml
