[project]
name = "{{ pymodule_name }}"
description = "{{ description }}"
readme = "README.md"
requires-python = ">={{ python_version }}"
dependencies = [
    "litestar[standard]>=2.13.0",
    "pydantic-settings>=2.6.1",
    "structlog>=24.4.0",
]
dynamic = ["version"]

{% if enable_cli %}
[project.scripts]
{{ cli_tool_name }} = "{{ pymodule_name }}.cli:cli_entrypoint"

{% endif %}
[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "ipdb>=0.13.13",
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "polylith-cli>=1.22.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "ruff>=0.8.1",
    "setuptools-scm>=8.1.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.hatch.build.hooks.vcs]
version-file = "components/{{ pymodule_name }}/version/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--verbose",
    "--exitfirst",
    "--import-mode=importlib",
    "--cov={{ pymodule_name }}",
    "--cov-report=term-missing",
]

[tool.ruff.lint]
ignore = ["E712"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]  # ignore `E402` (import violations) and `F401` (unused variables) in all `__init__.py` files

[tool.mypy]
mypy_path = "components, bases"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "setuptools_scm"
ignore_missing_imports = true

[tool.polylith.bricks]
"bases/{{ pymodule_name }}/cli" = "{{ pymodule_name }}/cli"
"bases/{{ pymodule_name }}/server" = "{{ pymodule_name }}/server"
"components/{{ pymodule_name }}/logging" = "{{ pymodule_name }}/logging"
"components/{{ pymodule_name }}/services" = "{{ pymodule_name }}/services"
"components/{{ pymodule_name }}/version" = "{{ pymodule_name }}/version"
"components/{{ pymodule_name }}/settings" = "{{ pymodule_name }}/settings"
