[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "{{ pymodule_name }}_cli"
version = "0.1.0"

requires-python = ">={{ python_version }}"

dependencies = [
  "click>=8.1.8",
  "setuptools-scm>=8.1.0",
]

[project.scripts]
{{ cli_tool_name }} = "{{ pymodule_name }}.cli:cli_entrypoint"

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["{{ pymodule_name }}"]

[tool.hatch.build.hooks.polylith-bricks]
# This section is needed to enable the hook in the build process, even if empty.

[tool.polylith.bricks]
"../../bases/{{ polylith_namespace }}/api" = "{{ polylith_namespace }}/api"
"../../bases/{{ polylith_namespace }}/cli" = "{{ polylith_namespace }}/cli"
"../../components/{{ polylith_namespace }}/version" = "{{ polylith_namespace }}/version"
